src/me/piotrbuda/intellij/pony/psi/PonyParser.java
// This is a generated file. Not intended for manual editing.
package me.piotrbuda.intellij.pony.psi;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static me.piotrbuda.intellij.pony.psi.PonyTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class PonyParser implements PsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ASSIGNMENT) {
      r = assignment(b, 0);
    }
    else if (t == ATOM) {
      r = atom(b, 0);
    }
    else if (t == ATOMTYPE) {
      r = atomtype(b, 0);
    }
    else if (t == BINOP) {
      r = binop(b, 0);
    }
    else if (t == CALL) {
      r = call(b, 0);
    }
    else if (t == CAP) {
      r = cap(b, 0);
    }
    else if (t == CASEEXPR) {
      r = caseexpr(b, 0);
    }
    else if (t == CLASS_DEF) {
      r = class_def(b, 0);
    }
    else if (t == DOT) {
      r = dot(b, 0);
    }
    else if (t == ELSEIF) {
      r = elseif(b, 0);
    }
    else if (t == EXPRSEQ) {
      r = exprseq(b, 0);
    }
    else if (t == FIELD) {
      r = field(b, 0);
    }
    else if (t == IDSEQ) {
      r = idseq(b, 0);
    }
    else if (t == INFIX) {
      r = infix(b, 0);
    }
    else if (t == INFIXTYPE) {
      r = infixtype(b, 0);
    }
    else if (t == ISECTTYPE) {
      r = isecttype(b, 0);
    }
    else if (t == JUMP) {
      r = jump(b, 0);
    }
    else if (t == LITERAL) {
      r = literal(b, 0);
    }
    else if (t == MEMBERS) {
      r = members(b, 0);
    }
    else if (t == METHOD) {
      r = method(b, 0);
    }
    else if (t == NAMED) {
      r = named(b, 0);
    }
    else if (t == NAMEDARG) {
      r = namedarg(b, 0);
    }
    else if (t == NEXTASSIGNMENT) {
      r = nextassignment(b, 0);
    }
    else if (t == NEXTATOM) {
      r = nextatom(b, 0);
    }
    else if (t == NEXTEXPRSEQ) {
      r = nextexprseq(b, 0);
    }
    else if (t == NEXTINFIX) {
      r = nextinfix(b, 0);
    }
    else if (t == NEXTPOSTFIX) {
      r = nextpostfix(b, 0);
    }
    else if (t == NEXTTERM) {
      r = nextterm(b, 0);
    }
    else if (t == NOMINAL) {
      r = nominal(b, 0);
    }
    else if (t == NOSEMI) {
      r = nosemi(b, 0);
    }
    else if (t == PARAM) {
      r = param(b, 0);
    }
    else if (t == PARAMS) {
      r = params(b, 0);
    }
    else if (t == POSITIONAL) {
      r = positional(b, 0);
    }
    else if (t == POSTFIX) {
      r = postfix(b, 0);
    }
    else if (t == RAWSEQ) {
      r = rawseq(b, 0);
    }
    else if (t == SEMIEXPR) {
      r = semiexpr(b, 0);
    }
    else if (t == TERM) {
      r = term(b, 0);
    }
    else if (t == TILDE) {
      r = tilde(b, 0);
    }
    else if (t == TUPLE) {
      r = tuple(b, 0);
    }
    else if (t == TUPLETYPE) {
      r = tupletype(b, 0);
    }
    else if (t == TYPE) {
      r = type(b, 0);
    }
    else if (t == TYPEARGS) {
      r = typeargs(b, 0);
    }
    else if (t == TYPEPARAM) {
      r = typeparam(b, 0);
    }
    else if (t == TYPEPARAMS) {
      r = typeparams(b, 0);
    }
    else if (t == TYPES) {
      r = types(b, 0);
    }
    else if (t == UNIONTYPE) {
      r = uniontype(b, 0);
    }
    else if (t == USE) {
      r = use(b, 0);
    }
    else if (t == USE_FFI) {
      r = use_ffi(b, 0);
    }
    else if (t == WITHELEM) {
      r = withelem(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return module(b, l + 1);
  }

  /* ********************************************************** */
  // infix ('=' assignment)?
  public static boolean assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<assignment>");
    r = infix(b, l + 1);
    r = r && assignment_1(b, l + 1);
    exit_section_(b, l, m, ASSIGNMENT, r, false, null);
    return r;
  }

  // ('=' assignment)?
  private static boolean assignment_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_1")) return false;
    assignment_1_0(b, l + 1);
    return true;
  }

  // '=' assignment
  private static boolean assignment_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "=");
    r = r && assignment(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ID
  //   | literal
  //   | ('(' | LPAREN_NEW) (rawseq | '_') tuple? ')'
  //   | ('[' | LSQUARE_NEW) ('as' type ':')? rawseq (',' rawseq)* ']'
  //   | 'object' ('is' types)? members 'end'
  //   | 'lambda' typeparams? ('(' | LPAREN_NEW) params? ')' (':' type)? '?'? '=>' rawseq 'end'
  //   | '@' (ID | STRING) typeargs? ('(' | LPAREN_NEW) positional? named? ')' '?'?
  public static boolean atom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<atom>");
    r = consumeToken(b, ID);
    if (!r) r = literal(b, l + 1);
    if (!r) r = atom_2(b, l + 1);
    if (!r) r = atom_3(b, l + 1);
    if (!r) r = atom_4(b, l + 1);
    if (!r) r = atom_5(b, l + 1);
    if (!r) r = atom_6(b, l + 1);
    exit_section_(b, l, m, ATOM, r, false, null);
    return r;
  }

  // ('(' | LPAREN_NEW) (rawseq | '_') tuple? ')'
  private static boolean atom_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = atom_2_0(b, l + 1);
    r = r && atom_2_1(b, l + 1);
    r = r && atom_2_2(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, m, null, r);
    return r;
  }

  // '(' | LPAREN_NEW
  private static boolean atom_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "(");
    if (!r) r = consumeToken(b, LPAREN_NEW);
    exit_section_(b, m, null, r);
    return r;
  }

  // rawseq | '_'
  private static boolean atom_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_2_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = rawseq(b, l + 1);
    if (!r) r = consumeToken(b, "_");
    exit_section_(b, m, null, r);
    return r;
  }

  // tuple?
  private static boolean atom_2_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_2_2")) return false;
    tuple(b, l + 1);
    return true;
  }

  // ('[' | LSQUARE_NEW) ('as' type ':')? rawseq (',' rawseq)* ']'
  private static boolean atom_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = atom_3_0(b, l + 1);
    r = r && atom_3_1(b, l + 1);
    r = r && rawseq(b, l + 1);
    r = r && atom_3_3(b, l + 1);
    r = r && consumeToken(b, "]");
    exit_section_(b, m, null, r);
    return r;
  }

  // '[' | LSQUARE_NEW
  private static boolean atom_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "[");
    if (!r) r = consumeToken(b, LSQUARE_NEW);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('as' type ':')?
  private static boolean atom_3_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_3_1")) return false;
    atom_3_1_0(b, l + 1);
    return true;
  }

  // 'as' type ':'
  private static boolean atom_3_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_3_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "as");
    r = r && type(b, l + 1);
    r = r && consumeToken(b, ":");
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' rawseq)*
  private static boolean atom_3_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_3_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!atom_3_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "atom_3_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' rawseq
  private static boolean atom_3_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_3_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && rawseq(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'object' ('is' types)? members 'end'
  private static boolean atom_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "object");
    r = r && atom_4_1(b, l + 1);
    r = r && members(b, l + 1);
    r = r && consumeToken(b, "end");
    exit_section_(b, m, null, r);
    return r;
  }

  // ('is' types)?
  private static boolean atom_4_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4_1")) return false;
    atom_4_1_0(b, l + 1);
    return true;
  }

  // 'is' types
  private static boolean atom_4_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "is");
    r = r && types(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'lambda' typeparams? ('(' | LPAREN_NEW) params? ')' (':' type)? '?'? '=>' rawseq 'end'
  private static boolean atom_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "lambda");
    r = r && atom_5_1(b, l + 1);
    r = r && atom_5_2(b, l + 1);
    r = r && atom_5_3(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && atom_5_5(b, l + 1);
    r = r && atom_5_6(b, l + 1);
    r = r && consumeToken(b, "=>");
    r = r && rawseq(b, l + 1);
    r = r && consumeToken(b, "end");
    exit_section_(b, m, null, r);
    return r;
  }

  // typeparams?
  private static boolean atom_5_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_1")) return false;
    typeparams(b, l + 1);
    return true;
  }

  // '(' | LPAREN_NEW
  private static boolean atom_5_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "(");
    if (!r) r = consumeToken(b, LPAREN_NEW);
    exit_section_(b, m, null, r);
    return r;
  }

  // params?
  private static boolean atom_5_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_3")) return false;
    params(b, l + 1);
    return true;
  }

  // (':' type)?
  private static boolean atom_5_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_5")) return false;
    atom_5_5_0(b, l + 1);
    return true;
  }

  // ':' type
  private static boolean atom_5_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ":");
    r = r && type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '?'?
  private static boolean atom_5_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_6")) return false;
    consumeToken(b, "?");
    return true;
  }

  // '@' (ID | STRING) typeargs? ('(' | LPAREN_NEW) positional? named? ')' '?'?
  private static boolean atom_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "@");
    r = r && atom_6_1(b, l + 1);
    r = r && atom_6_2(b, l + 1);
    r = r && atom_6_3(b, l + 1);
    r = r && atom_6_4(b, l + 1);
    r = r && atom_6_5(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && atom_6_7(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ID | STRING
  private static boolean atom_6_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    if (!r) r = consumeToken(b, STRING);
    exit_section_(b, m, null, r);
    return r;
  }

  // typeargs?
  private static boolean atom_6_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_2")) return false;
    typeargs(b, l + 1);
    return true;
  }

  // '(' | LPAREN_NEW
  private static boolean atom_6_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "(");
    if (!r) r = consumeToken(b, LPAREN_NEW);
    exit_section_(b, m, null, r);
    return r;
  }

  // positional?
  private static boolean atom_6_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_4")) return false;
    positional(b, l + 1);
    return true;
  }

  // named?
  private static boolean atom_6_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_5")) return false;
    named(b, l + 1);
    return true;
  }

  // '?'?
  private static boolean atom_6_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_7")) return false;
    consumeToken(b, "?");
    return true;
  }

  /* ********************************************************** */
  // 'this'
  //   | 'box'
  //   | ('(' | LPAREN_NEW) (infixtype | '_') tupletype? ')'
  //   | nominal
  public static boolean atomtype(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomtype")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<atomtype>");
    r = consumeToken(b, "this");
    if (!r) r = consumeToken(b, "box");
    if (!r) r = atomtype_2(b, l + 1);
    if (!r) r = nominal(b, l + 1);
    exit_section_(b, l, m, ATOMTYPE, r, false, null);
    return r;
  }

  // ('(' | LPAREN_NEW) (infixtype | '_') tupletype? ')'
  private static boolean atomtype_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomtype_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = atomtype_2_0(b, l + 1);
    r = r && atomtype_2_1(b, l + 1);
    r = r && atomtype_2_2(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, m, null, r);
    return r;
  }

  // '(' | LPAREN_NEW
  private static boolean atomtype_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomtype_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "(");
    if (!r) r = consumeToken(b, LPAREN_NEW);
    exit_section_(b, m, null, r);
    return r;
  }

  // infixtype | '_'
  private static boolean atomtype_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomtype_2_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = infixtype(b, l + 1);
    if (!r) r = consumeToken(b, "_");
    exit_section_(b, m, null, r);
    return r;
  }

  // tupletype?
  private static boolean atomtype_2_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomtype_2_2")) return false;
    tupletype(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ('and' | 'or' | 'xor' | '+' | '-' | '*' | '/' | '%' | '<<' | '>>' | 'is' | 'isnt' | '==' | '!=' | '<' | '<=' | '>=' | '>') term
  public static boolean binop(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binop")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<binop>");
    r = binop_0(b, l + 1);
    r = r && term(b, l + 1);
    exit_section_(b, l, m, BINOP, r, false, null);
    return r;
  }

  // 'and' | 'or' | 'xor' | '+' | '-' | '*' | '/' | '%' | '<<' | '>>' | 'is' | 'isnt' | '==' | '!=' | '<' | '<=' | '>=' | '>'
  private static boolean binop_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binop_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "and");
    if (!r) r = consumeToken(b, "or");
    if (!r) r = consumeToken(b, "xor");
    if (!r) r = consumeToken(b, "+");
    if (!r) r = consumeToken(b, "-");
    if (!r) r = consumeToken(b, "*");
    if (!r) r = consumeToken(b, "/");
    if (!r) r = consumeToken(b, "%");
    if (!r) r = consumeToken(b, "<<");
    if (!r) r = consumeToken(b, ">>");
    if (!r) r = consumeToken(b, "is");
    if (!r) r = consumeToken(b, "isnt");
    if (!r) r = consumeToken(b, "==");
    if (!r) r = consumeToken(b, "!=");
    if (!r) r = consumeToken(b, "<");
    if (!r) r = consumeToken(b, "<=");
    if (!r) r = consumeToken(b, ">=");
    if (!r) r = consumeToken(b, ">");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '(' positional? named? ')'
  public static boolean call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<call>");
    r = consumeToken(b, "(");
    r = r && call_1(b, l + 1);
    r = r && call_2(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, l, m, CALL, r, false, null);
    return r;
  }

  // positional?
  private static boolean call_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_1")) return false;
    positional(b, l + 1);
    return true;
  }

  // named?
  private static boolean call_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_2")) return false;
    named(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'iso'
  //   | 'trn'
  //   | 'ref'
  //   | 'val'
  //   | 'box'
  //   | 'tag'
  public static boolean cap(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cap")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<cap>");
    r = consumeToken(b, "iso");
    if (!r) r = consumeToken(b, "trn");
    if (!r) r = consumeToken(b, "ref");
    if (!r) r = consumeToken(b, "val");
    if (!r) r = consumeToken(b, "box");
    if (!r) r = consumeToken(b, "tag");
    exit_section_(b, l, m, CAP, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '|' infix? ('where' rawseq)? ('=>' rawseq)?
  public static boolean caseexpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseexpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<caseexpr>");
    r = consumeToken(b, "|");
    r = r && caseexpr_1(b, l + 1);
    r = r && caseexpr_2(b, l + 1);
    r = r && caseexpr_3(b, l + 1);
    exit_section_(b, l, m, CASEEXPR, r, false, null);
    return r;
  }

  // infix?
  private static boolean caseexpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseexpr_1")) return false;
    infix(b, l + 1);
    return true;
  }

  // ('where' rawseq)?
  private static boolean caseexpr_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseexpr_2")) return false;
    caseexpr_2_0(b, l + 1);
    return true;
  }

  // 'where' rawseq
  private static boolean caseexpr_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseexpr_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "where");
    r = r && rawseq(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('=>' rawseq)?
  private static boolean caseexpr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseexpr_3")) return false;
    caseexpr_3_0(b, l + 1);
    return true;
  }

  // '=>' rawseq
  private static boolean caseexpr_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseexpr_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "=>");
    r = r && rawseq(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ('type' | 'interface' | 'trait' | 'primitive' | 'class' | 'actor') '@'? ID typeparams? cap? ('is' types)? STRING? members
  public static boolean class_def(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_def")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<class def>");
    r = class_def_0(b, l + 1);
    r = r && class_def_1(b, l + 1);
    r = r && consumeToken(b, ID);
    r = r && class_def_3(b, l + 1);
    r = r && class_def_4(b, l + 1);
    r = r && class_def_5(b, l + 1);
    r = r && class_def_6(b, l + 1);
    r = r && members(b, l + 1);
    exit_section_(b, l, m, CLASS_DEF, r, false, null);
    return r;
  }

  // 'type' | 'interface' | 'trait' | 'primitive' | 'class' | 'actor'
  private static boolean class_def_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_def_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "type");
    if (!r) r = consumeToken(b, "interface");
    if (!r) r = consumeToken(b, "trait");
    if (!r) r = consumeToken(b, "primitive");
    if (!r) r = consumeToken(b, "class");
    if (!r) r = consumeToken(b, "actor");
    exit_section_(b, m, null, r);
    return r;
  }

  // '@'?
  private static boolean class_def_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_def_1")) return false;
    consumeToken(b, "@");
    return true;
  }

  // typeparams?
  private static boolean class_def_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_def_3")) return false;
    typeparams(b, l + 1);
    return true;
  }

  // cap?
  private static boolean class_def_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_def_4")) return false;
    cap(b, l + 1);
    return true;
  }

  // ('is' types)?
  private static boolean class_def_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_def_5")) return false;
    class_def_5_0(b, l + 1);
    return true;
  }

  // 'is' types
  private static boolean class_def_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_def_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "is");
    r = r && types(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // STRING?
  private static boolean class_def_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_def_6")) return false;
    consumeToken(b, STRING);
    return true;
  }

  /* ********************************************************** */
  // '.' ID
  public static boolean dot(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dot")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<dot>");
    r = consumeToken(b, ".");
    r = r && consumeToken(b, ID);
    exit_section_(b, l, m, DOT, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'elseif' rawseq 'then' rawseq (elseif | ('else' rawseq))?
  public static boolean elseif(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseif")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<elseif>");
    r = consumeToken(b, "elseif");
    r = r && rawseq(b, l + 1);
    r = r && consumeToken(b, "then");
    r = r && rawseq(b, l + 1);
    r = r && elseif_4(b, l + 1);
    exit_section_(b, l, m, ELSEIF, r, false, null);
    return r;
  }

  // (elseif | ('else' rawseq))?
  private static boolean elseif_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseif_4")) return false;
    elseif_4_0(b, l + 1);
    return true;
  }

  // elseif | ('else' rawseq)
  private static boolean elseif_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseif_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = elseif(b, l + 1);
    if (!r) r = elseif_4_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'else' rawseq
  private static boolean elseif_4_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseif_4_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "else");
    r = r && rawseq(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
